# SE-Project-Group-F

./: .gitignore  README.md
Documentation/: RPS_Bot_Constants.md  TODO.md  TODO2.md  feasibility-study.md
Meeting Reports/: Meeting 03.03.2026.md  Meeting 08.05.2026.md  Meeting 12.03.2026.md  Meeting 19.03.2026.md  Meeting 26.02.2026.md  Meeting 27.03.2026.md
src/smart-rps/: main.py  pyproject.toml  testNoCam.py
src/smart-rps/bot/: __init__.py  analyze_rps.py  bot.py
src/smart-rps/camera/: camera.py  face_detection.py  hand_gestures.py  person_detection.py
src/smart-rps/data/: RPS_Bot_Constants.md  datasets.md
src/smart-rps/ui/: fairness.py  ui.py
